--- a/workshops/BirdsVue/index.html
+++ b/workshops/BirdsVue/index.html
@@ -18,10 +18,11 @@
     <![endif]-->
   </head>
   <body>
-      <h1>HI there!</h1>
+      <h1>Pandas are a mazing!</h1>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type = "text/javascript" src="js/app.js"></script>
   </body>
 </html>
