--- a/workshops/BirdsVue/index.html
+++ b/workshops/BirdsVue/index.html
@@ -18,11 +18,53 @@
     <![endif]-->
   </head>
   <body>
-      <h1>Pandas are a mazing!</h1>
+      <div id="app">
+        <h2>{{ title }}</h2>
+        <div >
+          <div v-for ="b in birds">
+            <h3>{{ b.name }}</h3>
+            <p>{{ b.species }}</p>
+            <p>{{ b.gender }}</p>
+            <img :src="b.img" />
+          </div>
+        </div>
+
+          <div>
+
+            <form id="myForm" v-on:submit.prevent='addBird'>
+
+              <div class = 'col-md-12'>
+                <label>Bird Name</label>
+                <input type="text" v-model = 'name' />
+              </div>
+
+              <div class = 'col-md-12'>
+                <label>Bird Species</label>
+                <input type="text" v-model = 'species' />
+              </div>
+
+              <div class = 'col-md-12'>
+                <label>Bird Gender</label>
+                <input type="text" v-model = 'gender' />
+              </div>
+
+              <div class = 'col-md-12'>
+                <label>Image</label>
+                <input type="text" v-model = 'img'>
+              </div>
+
+
+              <button type="submit" class = 'btn btn-primarty'>Submit</button>
+            </form>
+
+          </div>
+
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script type = "text/javascript" src="js/app.js"></script>
   </body>
 </html>
