--- a/workshops/BirdsVue/index.html
+++ b/workshops/BirdsVue/index.html
@@ -1,16 +1,17 @@
+//keep this command safe browser-sync start --server --files "*.html, css/*.css, js/*.js"
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title></title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styling.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -19,54 +20,11 @@
     <![endif]-->
   </head>
   <body>
-    <center>
-      <div id="app">
-        <h2>{{ title }}</h2>
-        <div class = "birdBlock" >
-          <div v-for ="b in birds">
-            <h3>{{ b.name }}</h3>
-            <p>{{ b.species }}</p>
-            <p>{{ b.gender }}</p>
-            <img :src="b.img" />
-          </div>
-        </div>
-
-          <div>
-
-            <form id="myForm" v-on:submit.prevent='addBird'>
-
-              <div class = 'col-md-12' >
-                <label>Bird Name</label>
-                <input type="text" v-model = 'name' />
-              </div>
-
-              <div class = 'col-md-12 '>
-                <label>Bird Species</label>
-                <input type="text" v-model = 'species' />
-              </div>
-
-              <div class = 'col-md-12'>
-                <label>Bird Gender</label>
-                <input type="text" v-model = 'gender' />
-              </div>
-
-              <div class = 'col-md-12'>
-                <label>Image</label>
-                <input type="text" v-model = 'img'>
-              </div>
-
-
-              <button type="submit" class = 'btn btn-primarty'>Submit</button>
-            </form>
-
-          </div>
-        </center>
-      </div>
+      <h1>Pandas</h1>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script type = "text/javascript" src="js/app.js"></script>
   </body>
 </html>
